still trying to publish to GitHub pages

--- a/angular-material-nav/index.html
+++ b/angular-material-nav/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>angular-material-nav</title>
-  <base href="https://fmorriso.github.io/angular-material-nav">
+  <base href="/angular-material-nav/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
